tests/baselines/reference/invalid-non-id-continue-groupspecifier-4-u.errors.txt
invalid-non-id-continue-groupspecifier-4-u.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-non-id-continue-groupspecifier-4-u.ts(14,6): error TS1005: '>' expected.
invalid-non-id-continue-groupspecifier-4-u.ts(14,6): error TS1496: '\>' is not a valid character escape.
invalid-non-id-continue-groupspecifier-4-u.ts(14,11): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-non-id-continue-groupspecifier-4-u.ts (4 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupSpecifier must be identifier-like.
    esid: prod-GroupSpecifier
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a\>.)/u;
       ~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
         
!!! error TS1005: '>' expected.
         ~~
!!! error TS1496: '\>' is not a valid character escape.
              ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    